# crudo

./: README  configure.ac  tareas.org
crudo/: .gitignore  configure.ac  logparser  logparser.c  prueba.txt
crudo/src/: Makefile.am  database.c  database.h  database_der.dia  error.c  error.h  main.c  package.h  parser.c  parser.h  schema.h
crudo/tests/: .gitignore  Makefile.am  check_parser.c  check_parser.h  suite.c  test.control  test1.control  tests.h
src/: .gitignore  Makefile.am  database.c  database.h  database_der.dia  error.c  error.h  main.c  package.c  package.h  parser.c  parser.h  schema.h
test/: .gitignore  Makefile.am  database_test.c  parser_test.c  test_runner.c
test/unity/: unity_fixture_malloc_overrides.h
tests/: .gitignore  Makefile.am  check_database.c  check_database.h  check_parser.c  check_parser.h  test2.control
